--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.555.0",
     "postcss": "^8.4.38",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.14",
     "three": "^0.181.2",
     "tsparticles": "^3.9.1",
-    "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
